# ricky-trades-dashboard

./: .env  package-lock.json  package.json  tailwind.config.ts
.lovable/: plan.md
bot/: README.md  arb-engine.ts  deploy-program.sh  deploy.sh  engine.ts
bot/production/: .env.example  README.md  download.sh  ecosystem.config.js  package-lock.json  package.json  setup.sh  tsconfig.json
bot/production/src/: arb-engine.ts  config.ts  constants.ts  cow-limitless-engine.ts  cow-polymarket-engine.ts  dflow-arb-engine.ts  drift-jupiter-engine.ts  gnosis-engine.ts  limitless-engine.ts  utils.ts  (+6 more)
bot/programs/atomic-arb/: Anchor.toml  Cargo.toml
bot/programs/atomic-arb/src/: lib.rs
src/: App.tsx  index.css
src/bot/: README.md  engine.ts
src/components/: ControlPanel.tsx  DashboardHeader.tsx  MempoolFeed.tsx  PairedTradeCard.tsx  PerformanceLog.tsx  PriceChart.tsx  StatsBar.tsx  StatusIndicator.tsx  TopTokens.tsx  TradeDetailDrawer.tsx  VolumeChart.tsx  WalletTracker.tsx
src/hooks/: useLiveData.ts
src/lib/: mockData.ts
src/pages/: Arbitrage.tsx  Index.tsx  Login.tsx
supabase/: config.toml
supabase/migrations/: 20260405015823_bc0159f3-f577-4826-98ce-4b4ce84936b6.sql  20260405015835_d8cea91a-c799-4da4-9bbb-3f646e5af4f9.sql  20260405032840_ea86e135-131d-42f6-b124-c0e2be6813a8.sql  20260405054531_6af51ac0-f5e6-4fc1-a604-d6945785e121.sql  20260407045338_0c8fb4dd-9e84-422d-81bc-e4cfe2c90125.sql  20260407045346_b06f9bdf-c8ec-485f-8ec7-7df4f2fb0a36.sql  20260409204121_1ad6314e-eb97-4461-95f6-750bbc5889f2.sql  20260409204154_6fba1b40-b6f1-4b76-bc9e-e442b24af52a.sql
(+2 files in other folders)
