[package]
name = "atomic-arb"
version = "0.1.0"
description = "Atomic cross-platform prediction market arbitrage — both legs fill or entire tx reverts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "atomic_arb"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
